--- a/javaee-training-bookstore/src/main/webapp/bookstoreTemplate.xhtml
+++ b/javaee-training-bookstore/src/main/webapp/bookstoreTemplate.xhtml
@@ -22,9 +22,21 @@
         </h:head>
 
         <h:body>
+        	<div id="cartInfo" class="cartInfo" align="left">
+        	    <h:panelGroup style="display: inline-block;
+        	    					border-style: solid;
+    								border-width: 5px;">
+        	    	#{bundle.Caption} : #{cart.numberOfItems}
+        	    	<br/>
+        	    	#{bundle.Amount} : #{cart.total}
+        	    	<br/>
+        	    	<a href="bookshowcart.xhtml">  #{bundle.EditCart} </a>
+                 </h:panelGroup>
+            </div>
             <div id="top" class="top" align="center" 
                  style="background-color: white;">
-                <h1>
+                 
+				<h1>
                     Duke's 
                     <h:graphicImage name="duke.books.gif" 
                                     library="images" alt="Duke holding books"/>
