Added clickable link in the title

--- a/javaee-training-bookstore/src/main/webapp/bookstoreTemplate.xhtml
+++ b/javaee-training-bookstore/src/main/webapp/bookstoreTemplate.xhtml
@@ -24,12 +24,16 @@
         <h:body>
             <div id="top" class="top" align="center" 
                  style="background-color: white;">
+                 
                 <h1>
+                <a href="index.xhtml" style="color: black">
                     Duke's 
                     <h:graphicImage name="duke.books.gif" 
                                     library="images" alt="Duke holding books"/>
                     Bookstore
+                    </a>
                 </h1> 
+                
                 <ui:insert name="top" />
             </div>
 
